feat: add donations
